SERVER-55168: Allow tenant migration cloner to write to system.views collections